# zprp

./: .gitignore  README.md  otodom_warszawa.json
zprp/: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
zprp/backend/: .env.example  Makefile  conftest.py  docker-compose.yml  how_to_backend.txt  requirements.txt
zprp/backend/api/: __init__.py  accomodations.py  aeds.py  attractions.py  bike_stations.py  fetch_warsaw_api.py  main.py  nature.py  pharmacies.py  police_stations.py  stops.py  theatres.py
zprp/backend/cache/: json_cache.py  save_cache.py
zprp/backend/db/: __init__.py  count_objects_nearby.py  db.py  get_avg_real_price.py  import_data.py
zprp/data-science/: data_record.py  dataset.py  get_random_loc.py
zprp/data_science/: average_cost.json  compare_models.py  create_dataset.py  data_record.py  dataset.py  get_random_loc.py  models_comparison.txt
zprp/docs/: mkdocs.yml
zprp/frontend/: .gitignore  Makefile  README.md  app.py  requirements.txt
zprp/geocoding/: .env.example  Dockerfile  Makefile  config.py  config_example.py  docker-compose.yml  geocoding.py  how_to_geocode.txt  requirements.txt
zprp/logger/: __init__.py  logging_config.py
zprp/models/: gam.pkl  model.pkl  model_random_forest_regressor.pkl  xgb_regressor.pkl
zprp/notebooks/: GAM.ipynb  LinearRegression.ipynb  RandomForestRegressor.ipynb  XGBoostRegressor.ipynb  data_analysis.ipynb  gam.pkl  model_linear_regression.pkl  xgb_regressor.pkl
zprp/scraper/: .env.example  Dockerfile  Makefile  config_example.py  docker-compose.yml  how_to_scrap.txt  main.py  requirements.txt  scrapping.py
zprp/tests/: test_data.py
(+85 files in other folders)
