[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zprp"
version = "0.0.1"
description = "dane po warszawsku"
authors = [
  { name = "pw" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.7"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | reports
  | notebooks
  | models
  | data
  | docs
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["zprp"]
force_sort_within_sections = true
skip = [
  ".git",
  ".venv",
  "venv",
  "reports",
  "models",
  "notebooks",
  "data",
  "docs",
  "build",
  "dist",
]


[tool.flake8]
max-line-length = 99
extend-ignore = [
    "E203",  # black compatibility
    "W503",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "reports",
    "models",
    "notebooks",
    "data",
    "docs",
    "build",
    "dist",
]
